syntax = "proto3";

package user_proto;

option go_package = "./;proto";

service UserService {
    rpc GetUser(GetUserReq) returns (CreateUserResponse);
    rpc CreateUser(User) returns (CreateUserResponse);
}

message User {
    string uuid = 1;
    string name = 2;
    string email = 3;
}

message GetUserReq {
    string userID = 1;
}

message CreateUserResponse {
    string message = 1;
    int32 status_code = 2;
}